MitosisTimesheet/src/main/webapp/css/style.css
html, body {
	margin: 0;
	width: 100%;
}

tbody {
	color: grey;
}

.overlay {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	background: #000000;
	opacity: .65;
	filter: alpha(opacity = 65);
	-moz-opacity: .65;
	z-index: 100;
	display: none;
}

* {
	font-family: sans-serif;
}

a {
	cursor: pointer;
}

.btn-xs {
	font-size: 12px;
	padding: 2px 12px 2px 12px;
}

.btn-sm {
	font-size: 14px;
	padding: 5px 15px 5px 15px;
}

.btn-md {
	font-size: 16px;
}

.btn-lg {
	font-size: 20px;
	padding: 10px 25px 10px 25px;
}

.btn-info-toms {
	
}
/*MItosis Timesheet*/

 /*MItosis Timesheet*/

.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
	color: white; font-weight: bold; background: none; font-size: 18px;	
}
.navbar-inverse .navbar-nav a:hover{
	font-size: 16px; font-weight: bold;
}
.navbar-inverse .navbar-nav>li>a{
	color: white;
}
.navbar-inverse .navbar-toggle {
border: none;
}
.navbar-toggle {
	margin-top: 17px;
}
.navbar-nav {
margin: 2px 40px;
}
.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
	{
	z-index: 1;
}
.alert-msg{
 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
 }
.alert-msg1{
 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
 }
 .alert-success{
 	height: 28px; font-size: 20px; border-radius: 10px;
 }
 .alert-danger{
 	height: 28px; font-size: 20px; border-radius: 10px;
 }
 

.thead-mit-ts {
	color: whitesmoke;
	background: gray;
}

.ts-form {
	margin-top: 50px;
	margin-left: 2%;
	margin-bottom: 50px;
	float: left;
	width: 100%;
	display: block;
	height: 34px;
	padding: 6px 12px;
	font-size: 14px;
	color: #555;
	background-color: #fff;
	background-image: none;
	border: 1px solid #ccc;
	border-radius: 4px;
}

.ts-form-div {
	width: 100%;
	margin: 35px 0px 35px 0px;
	word-spacing: 15px;
	padding-left: 5px;
}
.btn-formproject {
	word-spacing: 0;
	
}

.project-form-div {
	/* padding-left: 6%;
	padding-right: 2%; */
	margin: 35px 0px 35px 0px;
	word-spacing: 20px;
}
.teamassgn-form-div {
	/* padding-left: 6%;
	padding-right: 2%; */
	margin: 35px 0px 35px 0px;
	word-spacing: 35px;
}

.pagination-sm {
	float: right;
	margin-top: 5px;
	margin-right: 50px;
}

.table {
	border-bottom: 1px solid gainsboro;
	table-layout: fixed;
white-space: nowrap;
}

.table th {
	text-align: center;
}

.table tbody td {
	text-align: center;
	 white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.row-date{
width:10%;	
}
.row-hours{
width:10%;	
}
.row-name{
width:20%;	
}
.row-des{
width:30%;	
}

.mitosis_ts {
	border: 2px solid gray;
}

.btn-success-ts {
	background: #0FDA9A;
	border-radius: 2px;
	padding: 10px;
}

.btn-danger-ts {
	background: #9e2f2f;
	border-radius: 2px;
	padding: 10px;
}

.btn-primary-ts {
	background: #30699E;
	border-radius: 2px;
	padding: 10px;
}

.btn-warning-ts {
	background: #FF9900;
	border-radius: 2px;
	padding: 10px;
}

.form-inline .form-group {
	margin-bottom: 15px;
}




.logo {
	padding: 8px 0 8px 0px;
	float: left;
}

.top-fixed {
	width: 100%;
	height: 80px;
}

.lb-username {
	font-size: 18px;
	margin-top: 20px;
	margin-right: 30px;
	position: relative;
}

.btn-logout {
	margin-top: 15px;
}
.account th, .account td { 
     border-top: none !important;
     border-bottom: none !important; 
 }
 .account tbody td{
 	 text-align: left;
 }
 .label-td{
 	width: 25%;
 }
 .edit-profile{
 	 display: none;
 }
 .btn-profile-save{
 	 display: none;
 }
 .profile-value{
 	 padding-top: 7px;		
 }
 
 .btn-profile-edit{
 	
 }
 .btn-profile-cancel{
 	display: none;	
 }
 a .glyphicon{
 	padding-left: 10px;
 }
h2 {
	float: left;
	color: gray;
	margin-left: 30%;
}

@media ( max-width : 450px) {
	h2 {
		margin-left: 10%;
	}
}

/* @media ( max-width : 768px) {
	.project-form-div {
		padding-left: 2%;
	}
} */

@media ( min-width : 767px) {
	/* .project-form-div {
		padding-left: 7%;
	} */
	h3 {
		float: left;
		color: gray;
	}
}
@media (max-width: 840px){
 	.alert-msg{
 	margin: auto;
 }
 .alert-msg1{
 	margin: auto;
 }
 }
 /* @media (min-width: 768px){
}
.form-inline .form-control{
	width: 150px;
.form-inline .form-control1{
	width: 100px;
}
} */
@media (max-width: 845px){
	.nav> li.lb-username{
		display: none;
	}
	.nav> li>.btn-logout{
		margin-top: 0;
		margin-bottom: 3px;
		margin-left: 0;
	}	
	
}
@media ( min-width : 1040px) {
	.btn-formproject{
			float: right;
	}
	/* .form-ts .form-control{
			width: 150px;
	} */
	.form-inline .date{
			width: 115px; 
	}
	.form-inline .hour{
			width: 115px; 
	}
	.form-inline .projectdet-form{
			width: 312px;
	}
	
	}

@media ( min-width : 800px) {	
	/* .project-form .form-group .form-control{
	width: 230px;
	} */
	.navbar-nav{
		margin: 2px 0px;
	}
}

/* .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
	color: white; font-weight: bold; background: none; font-size: 18px;	
}
.navbar-inverse .navbar-nav a:hover{
	font-size: 16px; font-weight: bold;
}
.navbar-inverse .navbar-nav>li>a{
	color: white;
}
.navbar-inverse .navbar-toggle {
border: none;
}
.navbar-toggle {
	margin-top: 17px;
}
.navbar-nav {
margin: 2px 40px;
}
.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
	{
	z-index: 1;
}
.alert-msg{
 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
 }
.alert-msg1{
 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
 }
 .alert-success{
 	height: 28px; font-size: 20px; border-radius: 10px;
 }
 .alert-danger{
 	height: 28px; font-size: 20px; border-radius: 10px;
 }
 

.thead-mit-ts {
	color: whitesmoke;
	background: gray;
}
/* ... */

